# scout-off-contracts

./: Cargo.toml
contracts/progress/: Cargo.toml
contracts/progress/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/progress/test_snapshots/tests/: test_advance_level_history_counter_overflow.1.json  test_advance_level_sequence.1.json  test_advance_level_succeeds_when_verification_contract_set.1.json  test_advance_level_unauthorized_when_verification_contract_set.1.json  test_advance_level_without_verification_contract.1.json  test_old_admin_loses_access_after_transfer.1.json  test_transfer_admin_success.1.json  test_transfer_admin_unauthorized.1.json
contracts/registration/: Cargo.toml
contracts/registration/src/: events.rs  lib.rs  types.rs
contracts/scout_access/: Cargo.toml
contracts/scout_access/src/: errors.rs  lib.rs
contracts/shared-types/: Cargo.toml
contracts/shared-types/src/: lib.rs
contracts/verification/src/: errors.rs  lib.rs  types.rs
docs/: CONTRACT_REFERENCE.md  DEPLOYMENT.md
