[workspace]
members = [
    "contracts/shared-types",
    "contracts/registration",
    "contracts/verification",
    "contracts/progress",
    "contracts/scout_access",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
